Version 0.2.6 (2022-03-03)

- add more quotes
- `search_quotes` uses `message()` not `stop()` on empty search
- add `search_text()` shortcut
- `search_quotes()` gets `ignore_case=TRUE`
- clean up error msgs in `statquote()`

Version 0.2.5 (2019-10-11)

- Added `find_duplicate_quotes()` [thx: philchalmers]
- Added hex sticker to README.md
- Added `as.markdown()` [#14]

Version 0.2.4 (2017-12-8)

- Added as.latex() to create text output suitable for LaTeX

Version 0.2.3 (2017-10-6)

- Created non-exported functions for adding to the quotes database [thx: philchalmers]

- Added some more quotes

Version 0.2.2 (2017-08-29)

- Fixed a bug giving `Error in .get.sq()` in more recent versions of R.

Version 0.2.1 (2016-09-06)

- Revised output of `statquote()` to be consistent with `search_quotes()`, and allow the print
  method to display multiple quotations.

- `quote_topics()` gains a `subtopics` argument.

- export `quote_topics`

- added `as.data.frame` S2 method for `statquote`

Version 0.2 (2016-09-06)

- Initial release